test/integration/bad/for_loops/reserved.stan
data {
  int N;
}
generated quantities {
  for (var in 1:N) {
    print("foo");
  }
}
